--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,33 @@
 #map {
   height: 640px;
 }
+.authAndSchools{
+  display: grid;
+  grid-template-columns:50% 50%;
+  justify-content: center;
+  align-items: center;
+}
+#fbookButton{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+}
+#savedSchools{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Raleway;
+  border:1px lightgray solid;
+  border-radius: 3px;
+  height:26.5px;
+  padding:0px;
+  cursor:pointer;
+}
+#savedSchools:hover{
+  background-color: lightgray;
+  color:white;
+}
+
 #wrapper {
   position: relative;
   display: grid;
